Update: docker compose yml environment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     depends_on:
       - db
     environment:
-      - SECRET_KEY={SECRET_KEY}
+      - SECRET_KEY="${SECRET_KEY}"
       - DB_USER=postgres
       - DB_NAME=postgres
       - DB_PASSWORD=postgres
